

add_library(Operations_objs OBJECT 
    AccumulateRowsColumns.cc
    AnalyzeHistograms.cc
    AnalyzeLightRadFieldCoincidence.cc
    AnalyzePicketFence.cc
    AnalyzeTPlan.cc
    And.cc
    ApplyCalibrationCurve.cc
    AutoCropImages.cc
    Average.cc
    BEDConvert.cc
    BoostSerializeDrover.cc
    BuildLexiconInteractively.cc
    ClusterDBSCAN.cc
    ComparePixels.cc
    ContourBasedRayCastDoseAccumulate.cc
    ContouringAides.cc
    ContourSimilarity.cc
    ContourViaGeometry.cc
    ContourViaThreshold.cc
    ContourVote.cc
    ContourWholeImages.cc
    ConvertContoursToMeshes.cc
    ConvertContoursToPoints.cc
    ConvertDoseToImage.cc
    ConvertImageToDose.cc
    ConvertImageToMeshes.cc
    ConvertImageToWarp.cc
    ConvertMeshesToPoints.cc
    ConvertNaNsToAir.cc
    ConvertNaNsToZeros.cc
    ConvertPixelsToPoints.cc
    ConvertWarpToImage.cc
    ConvertWarpToMeshes.cc
    ConvolveImages.cc
    CellularAutomata.cc
    CopyContours.cc
    CopyImages.cc
    CopyMeshes.cc
    CopyPoints.cc
    CountVoxels.cc
    CropImageDoseToROIs.cc
    CropImages.cc
    CropROIDose.cc
    DCEMRI_IAUC.cc
    DCEMRI_Nonparametric_CE.cc
    DICOMExportContours.cc
    DICOMExportImagesAsCT.cc
    DICOMExportImagesAsDose.cc
    DecayDoseOverTimeHalve.cc
    DecayDoseOverTimeJones2014.cc
    DecimatePixels.cc
    DeDuplicateImages.cc
    DeleteContours.cc
    DeleteImages.cc
    DeleteMeshes.cc
    DeletePoints.cc
    DetectShapes3D.cc
    DrawGeometry.cc
    DroverDebug.cc
    DumpAllOrderedImageMetadataToFile.cc
    DumpAnEncompassedPoint.cc
    DumpFilesPartitionedByTime.cc
    DumpImageMeshes.cc
    DumpImageMetadataOccurrencesToFile.cc
    DumpPixelValuesOverTimeForAnEncompassedPoint.cc
    DumpPlanSummary.cc
    DumpROIContours.cc
    DumpROIData.cc
    DumpROISNR.cc
    DumpTPlanMetadataOccurrencesToFile.cc
    DumpVoxelDoseInfo.cc
    EvaluateDoseVolumeStats.cc
    EvaluateNTCPModels.cc
    EvaluateTCPModels.cc
    ExportFITSImages.cc
    ExportLineSamples.cc
    ExportPointClouds.cc
    ExportSurfaceMeshes.cc
    ExportSurfaceMeshesOBJ.cc
    ExportSurfaceMeshesPLY.cc
    ExportSurfaceMeshesSTL.cc
    ExportSurfaceMeshesOFF.cc
    ExportWarps.cc
    ExtractImageHistograms.cc
    ExtractAlphaBeta.cc
    ExtractPointsWarp.cc
    False.cc
    ForEachDistinct.cc
    FVPicketFence.cc
    GenerateCalibrationCurve.cc
    GenerateSurfaceMask.cc
    GenerateSyntheticImages.cc
    GenerateVirtualDataContourViaThresholdTestV1.cc
    GenerateVirtualDataDoseStairsV1.cc
    GenerateVirtualDataImageSphereV1.cc
    GenerateVirtualDataPerfusionV1.cc
    GenerateWarp.cc
    GiveWholeImageArrayABoneWindowLevel.cc
    GiveWholeImageArrayAHeadAndNeckWindowLevel.cc
    GiveWholeImageArrayAThoraxWindowLevel.cc
    GiveWholeImageArrayAnAbdominalWindowLevel.cc
    GiveWholeImageArrayAnAlphaBetaWindowLevel.cc
    GridBasedRayCastDoseAccumulate.cc
    GroupImages.cc
    GrowContours.cc
    HighlightROIs.cc
    IfElse.cc
    ImageRoutineTests.cc
    ImprintImages.cc
    InterpolateSlices.cc
    IsolatedVoxelFilter.cc
    LoadFiles.cc
    LoadFilesInteractively.cc
    LogScale.cc
    MaxMinPixels.cc
    MeldDose.cc
    ModelIVIM.cc
    ModifyContourMetadata.cc
    ModifyImageMetadata.cc
    ModifyParameters.cc
    NegatePixels.cc
    NoOp.cc
    NormalizeLineSamples.cc
    NormalizePixels.cc
    Not.cc
    OptimizeStaticBeams.cc
    Or.cc
    OrderImages.cc
    PartitionContours.cc
    PerturbPixels.cc
    PlotLineSamples.cc
    PlotPerROITimeCourses.cc
    PointSeparation.cc
    PreFilterEnormousCTValues.cc
    PruneEmptyImageDoseArrays.cc
    PurgeContours.cc
    RankPixels.cc
    ReduceNeighbourhood.cc
    Repeat.cc
    ScalePixels.cc
    SelectSlicesIntersectingROI.cc
    SimplifyContours.cc
    SimulateRadiograph.cc
    SpatialBlur.cc
    SpatialDerivative.cc
    SpatialSharpen.cc
    SubsegmentContours.cc
    Subsegment_ComputeDose_VanLuijk.cc
    SubtractImages.cc
    SupersampleImageGrid.cc
    Terminal_Viewer.cc
    ThresholdImages.cc
    ThresholdOtsu.cc
    TrimROIDose.cc
    True.cc
    UBC3TMRI_DCE.cc
    UBC3TMRI_DCE_Differences.cc
    UBC3TMRI_DCE_Experimental.cc
    UBC3TMRI_IVIM_ADC.cc
    VolumetricCorrelationDetector.cc
    VolumetricSpatialBlur.cc
    VolumetricSpatialDerivative.cc
    WarpContours.cc
    WarpMeshes.cc
    WarpImages.cc
    WarpPoints.cc
    While.cc

    $<$<BOOL:${WITH_SFML}>:PresentationImage.cc>
    $<$<BOOL:${WITH_SFML}>:SFML_Viewer.cc>
    $<$<BOOL:${WITH_SDL}>:SDL_Viewer.cc>
    $<$<BOOL:${WITH_SDL}>:QueryUserInteractively.cc>

    $<$<BOOL:${WITH_EIGEN}>:DetectGrid3D.cc>
    $<$<BOOL:${WITH_EIGEN}>:VoxelRANSAC.cc>

    $<$<BOOL:${WITH_GNU_GSL}>:CT_Liver_Perfusion.cc>
    $<$<BOOL:${WITH_GNU_GSL}>:CT_Liver_Perfusion_First_Run.cc>
    $<$<BOOL:${WITH_GNU_GSL}>:CT_Liver_Perfusion_Ortho_Views.cc>
    $<$<BOOL:${WITH_GNU_GSL}>:CT_Liver_Perfusion_Pharmaco_1Compartment2Input_5Param.cc>
    $<$<BOOL:${WITH_GNU_GSL}>:CT_Liver_Perfusion_Pharmaco_1Compartment2Input_Reduced3Param.cc>
    $<$<BOOL:${WITH_GNU_GSL}>:DumpPerROIParams_KineticModel_1Compartment2Input_5Param.cc>

    $<$<BOOL:${WITH_CGAL}>:BCCAExtractRadiomicFeatures.cc>
    $<$<BOOL:${WITH_CGAL}>:ContourBooleanOperations.cc>
    $<$<BOOL:${WITH_CGAL}>:ConvertMeshesToContours.cc>
    $<$<BOOL:${WITH_CGAL}>:DumpROISurfaceMeshes.cc>
    $<$<BOOL:${WITH_CGAL}>:ExtractRadiomicFeatures.cc>
    $<$<BOOL:${WITH_CGAL}>:MakeMeshesManifold.cc>
    $<$<BOOL:${WITH_CGAL}>:MinkowskiSum3D.cc>
    $<$<BOOL:${WITH_CGAL}>:RemeshSurfaceMeshes.cc>
    $<$<BOOL:${WITH_CGAL}>:SeamContours.cc>
    $<$<BOOL:${WITH_CGAL}>:SimplifySurfaceMeshes.cc>
    $<$<BOOL:${WITH_CGAL}>:SubdivideSurfaceMeshes.cc>
    $<$<BOOL:${WITH_CGAL}>:SurfaceBasedRayCastDoseAccumulate.cc>
)

set_target_properties( Operations_objs PROPERTIES POSITION_INDEPENDENT_CODE TRUE )

